[tool.poetry]
name = "django-tls-rvanlaar"
version = "0.0.3"
description = "Stores the current request in Thread Local Storage using Werkzeug"
authors = ["Roland van Laar <roland@rolandvanlaar.nl>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3"
Werkzeug = ">=0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
